// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectHeaderDistrictsList /> should render correctly 1`] = `
Array [
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <li
    className="sc-bcXGCL iexBAt ProjectHeaderDistrictsList__DistrictsButton-hErwfx dvdtee p-0 data-districts__modal-link"
    onClick={[Function]}
  >
    <svg
      aria-hidden="true"
      className="sc-bcXGCL sc-oZHua hTGXTh hQQZty cap-icon"
      fill="none"
      height="1em"
      viewBox="0 0 9 12"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4.321 1a3.32 3.32 0 0 1 3.322 3.321c0 1.571-2.436 5.484-3.135 6.577a.22.22 0 0 1-.373 0C3.435 9.805 1 5.892 1 4.321A3.32 3.32 0 0 1 4.321 1"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={0.8}
      />
      <path
        d="M4.322 5.65a1.329 1.329 0 1 0 0-2.657 1.329 1.329 0 0 0 0 2.657"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={0.8}
      />
    </svg>
    <p
      className="sc-bcXGCL byscBc cap-text platform__body"
      title="zone 1 "
    >
      zone 1
       
      and-count-other-areas
    </p>
  </li>,
  <div
    ariaLabel="data_district_list"
    baseId="project-header-district-list-modal"
    data-testid="Modal"
    onClose={[Function]}
    show={false}
    size="lg"
  >
    <div
      className="ResetCss-jmWVRh hylUuV"
    >
      <div
        data-testid="Header"
      >
        count-area
      </div>
    </div>
    <div
      data-testid="Body"
    >
      <ul
        className="ListGroupFlush__Container-eGHZgt cEkgdF list-group-flush list-group"
        striped={false}
      >
        <li
          className="list-group-item"
        >
          zone 1
        </li>
        <li
          className="list-group-item"
        >
          zone 2
        </li>
        <li
          className="list-group-item"
        >
          zone 3
        </li>
        <li
          className="list-group-item"
        >
          zone 4
        </li>
        <li
          className="list-group-item"
        >
          zone 5
        </li>
      </ul>
    </div>
    <div
      data-testid="Footer"
    >
      <button
        className="sc-bcXGCL sc-gGvGpy iaJbua jrAhSN cap-button"
        onClick={[Function]}
        type="button"
      >
        global.close
      </button>
    </div>
  </div>,
]
`;

exports[`<ProjectHeaderDistrictsList /> should render correctly when project is archived 1`] = `
Array [
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <li
    className="sc-bcXGCL iexBAt ProjectHeaderDistrictsList__DistrictsButton-hErwfx dvdtee p-0 data-districts__modal-link"
    onClick={[Function]}
  >
    <svg
      aria-hidden="true"
      className="sc-bcXGCL sc-oZHua hTGXTh hQQZty cap-icon"
      fill="none"
      height="1em"
      viewBox="0 0 9 12"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4.321 1a3.32 3.32 0 0 1 3.322 3.321c0 1.571-2.436 5.484-3.135 6.577a.22.22 0 0 1-.373 0C3.435 9.805 1 5.892 1 4.321A3.32 3.32 0 0 1 4.321 1"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={0.8}
      />
      <path
        d="M4.322 5.65a1.329 1.329 0 1 0 0-2.657 1.329 1.329 0 0 0 0 2.657"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={0.8}
      />
    </svg>
    <p
      className="sc-bcXGCL byscBc cap-text platform__body"
      title="zone 1 "
    >
      zone 1
       
      and-count-other-areas
    </p>
  </li>,
  <div
    ariaLabel="data_district_list"
    baseId="project-header-district-list-modal"
    data-testid="Modal"
    onClose={[Function]}
    show={false}
    size="lg"
  >
    <div
      className="ResetCss-jmWVRh hylUuV"
    >
      <div
        data-testid="Header"
      >
        count-area
      </div>
    </div>
    <div
      data-testid="Body"
    >
      <ul
        className="ListGroupFlush__Container-eGHZgt cEkgdF list-group-flush list-group"
        striped={false}
      >
        <li
          className="list-group-item"
        >
          zone 1
        </li>
        <li
          className="list-group-item"
        >
          zone 2
        </li>
        <li
          className="list-group-item"
        >
          zone 3
        </li>
        <li
          className="list-group-item"
        >
          zone 4
        </li>
        <li
          className="list-group-item"
        >
          zone 5
        </li>
      </ul>
    </div>
    <div
      data-testid="Footer"
    >
      <button
        className="sc-bcXGCL sc-gGvGpy iaJbua jrAhSN cap-button"
        onClick={[Function]}
        type="button"
      >
        global.close
      </button>
    </div>
  </div>,
]
`;

exports[`<ProjectHeaderDistrictsList /> should render correctly with the display of modal 1`] = `
Array [
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <li
    className="sc-bcXGCL iexBAt ProjectHeaderDistrictsList__DistrictsButton-hErwfx dvdtee p-0 data-districts__modal-link"
    onClick={[Function]}
  >
    <svg
      aria-hidden="true"
      className="sc-bcXGCL sc-oZHua hTGXTh hQQZty cap-icon"
      fill="none"
      height="1em"
      viewBox="0 0 9 12"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4.321 1a3.32 3.32 0 0 1 3.322 3.321c0 1.571-2.436 5.484-3.135 6.577a.22.22 0 0 1-.373 0C3.435 9.805 1 5.892 1 4.321A3.32 3.32 0 0 1 4.321 1"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={0.8}
      />
      <path
        d="M4.322 5.65a1.329 1.329 0 1 0 0-2.657 1.329 1.329 0 0 0 0 2.657"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={0.8}
      />
    </svg>
    <p
      className="sc-bcXGCL byscBc cap-text platform__body"
      title="zone 1 "
    >
      zone 1
       
      and-count-other-areas
    </p>
  </li>,
  <div
    ariaLabel="data_district_list"
    baseId="project-header-district-list-modal"
    data-testid="Modal"
    onClose={[Function]}
    show={true}
    size="lg"
  >
    <div
      className="ResetCss-jmWVRh hylUuV"
    >
      <div
        data-testid="Header"
      >
        count-area
      </div>
    </div>
    <div
      data-testid="Body"
    >
      <ul
        className="ListGroupFlush__Container-eGHZgt cEkgdF list-group-flush list-group"
        striped={false}
      >
        <li
          className="list-group-item"
        >
          zone 1
        </li>
        <li
          className="list-group-item"
        >
          zone 2
        </li>
        <li
          className="list-group-item"
        >
          zone 3
        </li>
        <li
          className="list-group-item"
        >
          zone 4
        </li>
        <li
          className="list-group-item"
        >
          zone 5
        </li>
      </ul>
    </div>
    <div
      data-testid="Footer"
    >
      <button
        className="sc-bcXGCL sc-gGvGpy iaJbua jrAhSN cap-button"
        onClick={[Function]}
        type="button"
      >
        global.close
      </button>
    </div>
  </div>,
]
`;
